4.0.4 (27-06-2019)
- Bug Fix: regime description in registration history report should also check if curricular course is optional  

4.0.3 (26-06-2019)
- Refactor: upgrade dependencies

4.0.2 (19-06-2019)
- Bug Fix: added missing labels

4.0.1 (19-06-2019)
- Bug Fix: avoided NPE when collecting open enrolment periods for student 

4.0.0 (18-06-2019)
- Refactor: Moved core domain entities to academic-extensions module

3.0.1 (17-06-2019)
- Bug Fix: fix enrolment period test in StudentCurricularPlanEnrolmentManager 

3.0.0 (14-06-2019)
- Refactor: Renamed core domain entities package to academic

2.18.0 (11-06-2019)
- Refactor: Moved domain entities to academic-extensions module

2.17.0 (07-06-2019)
- Refactor: Moved configuration properties regarding quality mode to academic-extensions module

2.16.1 (04-06-2019)
- Improvement: Handle all exceptions when trying to create a new service request.
- Bug Fix: Fix minor bug in error message when request can not be created.

2.16.0 (16-05-2019)
- Improvement: AverageEntry API cleanup  
- Bug Fix: Collecting target curriculum lines for ICurriculumEntry requires curricular plan because this information is specific to calculated curriculum / curricular plan


2.15.0 (11-05-2019)
- Improvement: added accepted values implementation to qualitative grades