@@ -1,3 +1,5 @@
+- Refactor: moved RegistrationDataBean to academic-extensions
+
 4.0.4 (27-06-2019)
 - Bug Fix: regime description in registration history report should also check if curricular course is optional  
 
